--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    </head>
     <body>
         <t-template name="hello">    
-            <div> hello dont render please </div>
+            <div> hello {{ name }} </div>
         </t-template>
         <div id="root">
         </div>
