add template rendering

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <body>
         <t-template name="hello">    
             <div> hello {{ name }} </div>
+            <div> goodbye {{ name }} </div>
         </t-template>
         <div id="root">
         </div>
