--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
             <div> hello {{ name }} </div>
             <div> goodbye {{ name }} </div>
         </t-template>
+        <div id="something"></div>
     </body>
 </html>
