--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    </head>
     <body>
+
         <t-template name="hello">    
-            <div class="row">
+            <div class="row mt-2">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
@@ -19,6 +20,7 @@
                 </div>
             </div>
         </t-template>
+
         <div class="container" id="mainContent"></div>
     </body>
 </html>
