--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title"> {{ title }} </div>
-                            <div class="card-text"> {{ text }} </div>
+                            <div class="card-text" onclick="{{ handler }}" > {{ text }} </div>
                         </div>
                     </div>
                 </div>
